--- a/package.json
+++ b/package.json
@@ -1,31 +1,58 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "onchain-app-template",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "check": "biome check --write .",
+    "ci:check": "biome ci --formatter-enabled=false --linter-enabled=false",
+    "ci:format": "biome ci --linter-enabled=false --organize-imports-enabled=false",
+    "ci:lint": "biome ci --formatter-enabled=true --organize-imports-enabled=false",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "format": "biome format --write .",
+    "lint": "biome lint --write .",
+    "lint:unsafe": "biome lint --write --unsafe .",
     "start": "next start",
-    "lint": "next lint"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.35.2",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
-    "lucide-react": "^0.454.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "lucide": "^0.447.0",
+    "lucide-react": "^0.447.0",
+    "next": "^14.2.5",
+    "permissionless": "^0.1.26",
+    "prisma": "^5.22.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "shimmer-css": "^1.0.1",
+    "siwe": "^2.3.2",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1",
-    "postcss": "^8",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@biomejs/biome": "1.9.3",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.2.0",
+    "@types/node": "^20.11.8",
+    "@types/react": "18.3.10",
+    "@types/react-dom": "^18.2.7",
+    "@vitest/coverage-v8": "^2.0.2",
+    "@vitest/ui": "^2.0.1",
+    "@wagmi/cli": "latest",
+    "autoprefixer": "^10.4.19",
+    "bufferutil": "^4.0.7",
+    "encoding": "^0.1.13",
+    "jsdom": "^24.1.0",
+    "lokijs": "^1.5.12",
+    "pino-pretty": "^10.2.0",
+    "postcss": "^8.4.38",
+    "supports-color": "^9.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "5.6.2",
+    "utf-8-validate": "^6.0.3",
+    "vitest": "^2.0.1"
   }
 }
