--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18",
     "shimmer-css": "^1.0.1",
     "siwe": "^2.3.2",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "wagmi": "^2.12.27"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
