--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "shimmer-css": "^1.0.1",
     "siwe": "^2.3.2",
     "sonner": "^1.7.0",
+    "viem": "^2.21.42",
     "wagmi": "^2.12.27"
   },
   "devDependencies": {
