--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@coinbase/onchainkit": "^0.35.2",
     "@prisma/client": "^5.22.0",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.11",
